--- a/test/fixtures/friends.yml
+++ b/test/fixtures/friends.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  f1: 1
-  f2: 1
+  user_id: 1
+  friend_id: 1
 
 two:
-  f1: 1
-  f2: 1
+  user_id: 1
+  friend_id: 1
