--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user_id: 1
   title: MyString
-  text: MyString
-  recipient: 1
-  sender: 1
+  desc: MyString
+  sender_id: 1
 
 two:
+  user_id: 1
   title: MyString
-  text: MyString
-  recipient: 1
-  sender: 1
+  desc: MyString
+  sender_id: 1
